--- a/package.json
+++ b/package.json
@@ -1,8 +1,4 @@
 {
-    { "url" : "https://github.com/adamko91/todo_project"
-    , "email" : "project@hostname.com"
-    }
-    
       "name": "projekt_zal",
       "description": "projekt_listy_to_do",
       "main": "index.js",
@@ -30,9 +26,11 @@
         "file-loader": "^0.8.5",
         "html-loader": "^0.4.3",
         "style-loader": "^0.13.0",
+        "webpack": "^1.12.14",
+        "webpack-dev-server": "^1.14.1"
       },
       "dependencies": {
         "angular": "^1.5.2",
-        "angular-ui-router": "^0.2.18",
+        "bootstrap": "^3.3.6"
       }
 }
