--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
       "author": "Adam_Kozubal",
       "license": "ISC", 
       "devDependencies": {
+        "angularfire": "^1.2.0",
         "babel-core": "^6.5.2",
         "babel-loader": "^6.2.3",
         "babel-preset-es2015": "^6.5.0",
@@ -32,6 +33,7 @@
       "dependencies": {
         "angular": "^1.5.2",
         "angular-ui-router": "^0.2.18",
-        "bootstrap": "^3.3.6"
+        "bootstrap": "^3.3.6",
+        "firebase": "^2.4.2"
       }
 }
